--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 :root {
   --blue-color: #1992d4;
+  --gray-color: #e2e8f0;
 }
 
 html {
@@ -14,16 +15,27 @@ html {
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
-  grid-template-columns: minmax(250px, 1fr) 4fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-columns: clamp(200px, 25%, 300px) 4fr;
+  grid-template-rows: clamp(150px, 10%, 180px) 6fr;
 }
 
 a {
-  color: #ffffff;
   cursor: pointer;
   text-decoration: none;
+}
+
+h3 {
+  font-size: 1.5rem;
+  line-height: 2;
+  font-weight: 600;
+  color: #000;
+}
+
+h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .sidebar {
@@ -39,14 +51,13 @@ a {
   grid-template-rows: 1fr 4fr 4fr;
 }
 
-header {
-  grid-column: 2 / 3;
-  background-color: gray;
+.sidebar a {
+  color: #ffffff;
 }
 
 main {
   grid-column: 2 / 3;
-  background-color: aquamarine;
+  background-color: var(--gray-color);
 }
 
 .logo {
@@ -88,4 +99,237 @@ main {
 
 .sidebar li span {
   vertical-align: middle;
+}
+
+/* Header Section Styles Start */
+
+header {
+  margin: 20px 2% 0px 5%;
+  min-width: max-content;
+  position: relative;
+  grid-column: 2 / 3;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 20px 20px -20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  row-gap: 20px;
+}
+
+form .scope {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+form #site-search {
+  width: clamp(200px, 70%, 600px);
+  background-color: var(--gray-color);
+  border-radius: 20px;
+  padding: 5px 5px 5px 10px;
+  border: none;
+}
+
+#site-search:focus {
+  outline: none !important;
+  border: 1px solid var(--blue-color);
+}
+
+.login {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10px;
+  color: #000;
+}
+
+.login a {
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: #000;
+}
+
+.login a img {
+  border-radius: 30px;
+  width: 20px;
+  height: auto;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+.user-info {
+  align-self: center;
+}
+
+.user-info img {
+  margin-right: 10px;
+  vertical-align: middle;
+  width: 45px;
+  border-radius: 30px;
+}
+
+.user-info div {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+p.greeting {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 4px;
+}
+
+p.user-name {
+  font-weight: 600;
+  font-size: 1.7rem;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-self: center;
+}
+
+.links a {
+}
+
+.btn {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-right: 5px;
+  color: #ffffff;
+  background-color: var(--blue-color);
+  padding: 7px 30px 7px 30px;
+  border-radius: 50px;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+}
+
+main {
+  padding: 20px 2% 10px 3%;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  column-gap: 30px;
+}
+
+main h3 {
+  margin-bottom: 10px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 10px 15px 25px;
+  min-height: 23vh;
+  background: linear-gradient(to right, #f0b429 1% 2%, white 2% 90%);
+  border-radius: 10px;
+}
+
+.box h4 {
+  font-size: 1.4rem;
+  margin-bottom: 10px;
+}
+
+.box p {
+  font-size: 1.2rem;
+  line-height: 1.3;
+  color: #636363;
+}
+
+.icons {
+  margin-top: auto;
+  display: flex;
+  gap: 15px;
+  align-self: flex-end;
+  margin-right: 10px;
+}
+
+.icons img {
+  width: 20px;
+}
+
+.icons img:hover {
+  cursor: pointer;
+}
+
+.right-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 30px;
+}
+
+.top-box h5 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 2;
+}
+
+.top-box .box1 h5 {
+  margin-top: 10px;
+}
+
+.top-box .box1 p {
+  font-size: 1.1rem;
+  color: #636363;
+  line-height: 1.3;
+  padding: 0px 2px 15px 2px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.top-box .box1 div:last-child p {
+  border: none;
+}
+
+.box1 {
+  background-color: #ffffff;
+  padding: 10px 20px 10px 20px;
+  border-radius: 10px;
+}
+
+.box2 {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.box2 img {
+  vertical-align: middle;
+  width: 40px;
+  height: auto;
+  border-radius: 30px;
+}
+
+.box2 .trending_users p:first-child {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.box2 .trending_users p:last-child {
+  margin-top: 2px;
+  font-size: 1.2;
+  color: #636363;
+}
+
+.trending {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 15px;
 }
